module(
    name = "sonic-platform-common",
    version = "1.0",
)

# Pure Python wheel: no cc, no apt, no patches.
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "aspect_rules_py", version = "1.11.7")
bazel_dep(name = "tar.bzl", version = "0.8.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
